Avanzamento e modifica parte grafica catalogo

--- a/AutoScout24/AutoScout24.csproj
+++ b/AutoScout24/AutoScout24.csproj
@@ -151,6 +151,7 @@
     <Content Include="MazzoLuzzi.accdb">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <None Include="Resources\Back.png" />
     <None Include="Resources\carrello.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
